С socket и thread