@@ -11,8 +11,8 @@ public class UserList extends VBox implements UserListinterface{
 
     @Override
     public void createUserList(ArrayList<Player> players) {
-        getChildren().add(new PlayerInfoPane(players.getFirst()));
-        setMargin(getChildren().getFirst(), new Insets(0, 0, 0, 14));
+        getChildren().add(new PlayerInfoPane(players.get(0)));
+        setMargin(getChildren().get(0), new Insets(0, 0, 0, 14));
         for (int i = 1; i < players.size(); i++) {
             getChildren().add(new PlayerInfoPane(players.get(i)));
             setMargin(getChildren().get(i), new Insets(17, 0, 0, 14));
